--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 </div>
                             <div class="price-features">
                                 <ul>
-                                     <img src=uzor/uzor.png height=50px>
+                                     <img src=https://cdn.discordapp.com/attachments/1160955546535473196/1188140015696486551/20231223062343.png?ex=65abe59e&is=6599709e&hm=da258b285143de81baa095483ddd8a6fc66a3e6f11b721ba05475bf753d7c12f& height=50px>
                                     <li>Кораблики</li>
                                     <li>Идет</li>
                                     <li>19.10.23</li>
