--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <li>Кораблики</li>
                                     <li>Идет</li>
                                     <li>19.10.23</li>
-                                  <img src=uzor/uzor2.png height=50px>
+                                  <img src=https://cdn.discordapp.com/attachments/1160955546535473196/1188140016099147787/20231223062406.png?ex=65abe59e&is=6599709e&hm=5107176aad8d0b77c428ae9acc7abf257fd7d24f528183c81bb6be10bc18ccdf& height=50px>
                                 </ul>
                             </div>
                             
