--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                    </section>
         <section class="plan-and-pricing">
             <div class="container">
-                <h3 class="animated" data-animation="fadeInUp" data-animation-delay="100">𝙴𝚅𝙴𝙻𝚇 | 𝙴𝚅𝙴𝙽𝚃𝚂</h3>
+                <h3 class="animated" data-animation="fadeInUp" data-animation-delay="100">𝙴𝚅𝙴𝙽𝚃𝚂 𝙾𝙵𝙵𝙸𝙲𝙴</h3>
                 <h5 class="uppercase animated" data-animation="fadeInUp" data-animation-delay="200">Тут можно узнать все о наших ивентах</h5>
                 <ul class="price-tables">
                      <li class="col-md-4 price-main animated" data-animation="fadeInLeft" data-animation-delay="200">
