--- a/persik/index.html
+++ b/persik/index.html
@@ -1,5 +1,5 @@
 ﻿<html>
       <body> <h1>Mods</h1>
-     <button href= https://lemon4nkuser.github.io></button>
+     <button> <a href= https://lemon4nkuser.github.io></button>
       </body>
  </html>
