--- a/persik/index.html
+++ b/persik/index.html
@@ -1,6 +1,8 @@
 ﻿<html>
       <body> <h1>Mods</h1>
-     <button> <a href= https://lemon4nkuser.github.io></button>
-            <h4> Мне насрать как выглядит этот сайт</h4>
+<a href= https://lemon4nkuser.github.io>
+            <h4>Мод 1</h4> </a>
+            <a href= https://lemon4nkuser.github.io>
+            <h4>Мод 2</h4> </a>
       </body>
  </html>
