--- a/persik/index.html
+++ b/persik/index.html
@@ -4,5 +4,7 @@
             <h4>Мод 1</h4> </a>
             <a href= https://lemon4nkuser.github.io>
             <h4>Мод 2</h4> </a>
+            <a href= https://lemon4nkuser.github.io>
+            <h4>Мод 3</h4> </a>
       </body>
  </html>
