--- a/persik/index.html
+++ b/persik/index.html
@@ -2,7 +2,7 @@
       <body> <h1>Mods</h1>
 <a href= https://lemon4nkuser.github.io>
             <h4>Мод 1</h4> </a>
-            <a href= https://lemon4nkuser.github.io>
+            <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200466770243367055/mw_1.11.7.7_mc1.12.2.jar?ex=65c648cd&is=65b3d3cd&hm=bb806757616d4d22e041de5eb824a3d09215939ebf4b09a098406ace74442385&>
             <h4>Мод 2</h4> </a>
             <a href= https://lemon4nkuser.github.io>
             <h4>Мод 3</h4> </a>
