--- a/persik/index.html
+++ b/persik/index.html
@@ -9,13 +9,15 @@
     <link type="text/css" rel="stylesheet" href="style.css">
  
 </head>
-      <body> <h1>Mods</h1>
+      <body> <p>
+             <font size="7" color="white" face="arial">
+      </p><h1>Mods</h1>
             <h1> ЗАПУСКАТЬ ТОЛЬКО С ЭТИМИ МОДАМИ БЕЗ ОПТИФАЙНА</h1>
 <a href=https://cdn.discordapp.com/attachments/1160955546535473196/1200477737148764260/SRParasites-1.12.2v1.9.12.jar?ex=65c65304&is=65b3de04&hm=83990eb961839c0d220f3dda988af59c6640ce501e36a5abe0ec12185859e58b&>
             <h4>Мод 1</h4> </a>
             <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200466770243367055/mw_1.11.7.7_mc1.12.2.jar?ex=65c648cd&is=65b3d3cd&hm=bb806757616d4d22e041de5eb824a3d09215939ebf4b09a098406ace74442385&>
             <h4>Мод 2</h4> </a>
             <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200477904274989137/OptiFine_1.12.2_HD_U_G5.jar?ex=65c6532c&is=65b3de2c&hm=369a009ebdc6590baffbafc07c54117109f92fe04f0f6d135ad5443d9ce5c39c&>
-            <h4>Мод 3</h4> </a>
+            <h4>Мод 3</h4> </a> </font>
       </body>
  </html>
