--- a/persik/index.html
+++ b/persik/index.html
@@ -11,8 +11,8 @@
 </head>
       <body> <p>
              <font size="9" color="white" face="arial">
-      </p><h1>Mods</h1>
-            <h3> ЗАПУСКАТЬ ТОЛЬКО С ЭТИМИ МОДАМИ БЕЗ ОПТИФАЙНА</h3> </font>
+      </p><h1>Mods</h1> </font>
+             <font size="5" color="white" face="arial"> <h3> ЗАПУСКАТЬ ТОЛЬКО С ЭТИМИ МОДАМИ БЕЗ ОПТИФАЙНА</h3> </font>
  <font size="5" color="white" face="arial"> <a href=https://cdn.discordapp.com/attachments/1160955546535473196/1200477737148764260/SRParasites-1.12.2v1.9.12.jar?ex=65c65304&is=65b3de04&hm=83990eb961839c0d220f3dda988af59c6640ce501e36a5abe0ec12185859e58b&" style="white"> 
             <h4>Мод 1</h4> </a>
              <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200466770243367055/mw_1.11.7.7_mc1.12.2.jar?ex=65c648cd&is=65b3d3cd&hm=bb806757616d4d22e041de5eb824a3d09215939ebf4b09a098406ace74442385&" style="white"> 
