--- a/persik/index.html
+++ b/persik/index.html
@@ -19,6 +19,6 @@
             <h4>Мод 2</h4> </a>
         <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200477904274989137/OptiFine_1.12.2_HD_U_G5.jar?ex=65c6532c&is=65b3de2c&hm=369a009ebdc6590baffbafc07c54117109f92fe04f0f6d135ad5443d9ce5c39c&" style="white">
             <h4>Мод 3</h4> </a>
-              <video src="Rick_Astley_-_Never_Gonna_Give_You_Up_Official_Music_Video.mp4" controls></video>
+              <video src="Rick_Astley_-_Never_Gonna_Give_You_Up_Official_Music_Video.mp4" ></video>
                </body>
  </html>
