--- a/persik/index.html
+++ b/persik/index.html
@@ -12,13 +12,13 @@
       <body> <p>
              <font size="9" color="white" face="arial">
       </p><h1><center>Моды для ивента</center></h1> </font>
-             <font size="5" color="white" face="arial"> <h3> ЗАПУСКАТЬ ТОЛЬКО С ЭТИМИ МОДАМИ БЕЗ ОПТИФАЙНА</h3> </font>
+             <font size="5" color="white" face="arial"> <h3><center>ЗАПУСКАТЬ ТОЛЬКО С ЭТИМИ МОДАМИ БЕЗ ОПТИФАЙНА</center> </h3> </font>
  <font size="5" color="white" face="arial"> <a href=https://cdn.discordapp.com/attachments/1160955546535473196/1200477737148764260/SRParasites-1.12.2v1.9.12.jar?ex=65c65304&is=65b3de04&hm=83990eb961839c0d220f3dda988af59c6640ce501e36a5abe0ec12185859e58b&" style="white"> 
             <h4><center>Мод 1</center></h4> </a>
              <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200466770243367055/mw_1.11.7.7_mc1.12.2.jar?ex=65c648cd&is=65b3d3cd&hm=bb806757616d4d22e041de5eb824a3d09215939ebf4b09a098406ace74442385&" style="white"> 
             <h4><center>Мод 2</center></h4> </a>
         <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200477904274989137/OptiFine_1.12.2_HD_U_G5.jar?ex=65c6532c&is=65b3de2c&hm=369a009ebdc6590baffbafc07c54117109f92fe04f0f6d135ad5443d9ce5c39c&" style="white">
             <h4><center>Мод 3</center></h4> </a>
-              <img SRC=https://cdn.discordapp.com/attachments/1160955546535473196/1200518338615464078/RR-hero-1-768x480.jpg?ex=65c678d4&is=65b403d4&hm=fc6a64691a960598ececfdbdea8f96870223741541cc915909f7189daf648157&>
+              <center><img SRC=https://cdn.discordapp.com/attachments/1160955546535473196/1200518338615464078/RR-hero-1-768x480.jpg?ex=65c678d4&is=65b403d4&hm=fc6a64691a960598ececfdbdea8f96870223741541cc915909f7189daf648157&><center>
                </body>
  </html>
