--- a/persik/index.html
+++ b/persik/index.html
@@ -13,7 +13,7 @@
              <font size="9" color="white" face="arial">
       </p><h1><center>Моды для ивента</center></h1> </font>
              <font size="5" color="white" face="arial"> <h3><center>ЗАПУСКАТЬ ТОЛЬКО С ЭТИМИ МОДАМИ БЕЗ ОПТИФАЙНА</center> </h3> </font>
- <font size="5" color="white" face="arial"> <a href=https://cdn.discordapp.com/attachments/1160955546535473196/1200477737148764260/SRParasites-1.12.2v1.9.12.jar?ex=65c65304&is=65b3de04&hm=83990eb961839c0d220f3dda988af59c6640ce501e36a5abe0ec12185859e58b&" style="white"> 
+ <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200726774837948456/mod-1.jar?ex=65c73af3&is=65b4c5f3&hm=7dc37c7a517b91e5ad76cc18fd8a090f5e9d70accdb9a5a489c5d1415bd8baf3&" style="white"> 
             <h4><center>Мод 1</center></h4> </a>
              <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200466770243367055/mw_1.11.7.7_mc1.12.2.jar?ex=65c648cd&is=65b3d3cd&hm=bb806757616d4d22e041de5eb824a3d09215939ebf4b09a098406ace74442385&" style="white"> 
             <h4><center>Мод 2</center></h4> </a>
