--- a/persik/index.html
+++ b/persik/index.html
@@ -15,9 +15,9 @@
              <font size="5" color="white" face="arial"> <h3><center>ЗАПУСКАТЬ ТОЛЬКО С ЭТИМИ МОДАМИ БЕЗ ОПТИФАЙНА</center> </h3> </font>
  <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200726774837948456/mod-1.jar?ex=65c73af3&is=65b4c5f3&hm=7dc37c7a517b91e5ad76cc18fd8a090f5e9d70accdb9a5a489c5d1415bd8baf3&" style="white"> 
             <h4><center>Мод 1</center></h4> </a>
-             <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200466770243367055/mw_1.11.7.7_mc1.12.2.jar?ex=65c648cd&is=65b3d3cd&hm=bb806757616d4d22e041de5eb824a3d09215939ebf4b09a098406ace74442385&" style="white"> 
+             <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200727881475698769/mod-2.jar?ex=65c73bfb&is=65b4c6fb&hm=91e03f24ac1ba029a7ac1d738636fbfb1ba64ac79b7de2a12bb7a76caa2e2c42&" style="white"> 
             <h4><center>Мод 2</center></h4> </a>
-        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200477904274989137/OptiFine_1.12.2_HD_U_G5.jar?ex=65c6532c&is=65b3de2c&hm=369a009ebdc6590baffbafc07c54117109f92fe04f0f6d135ad5443d9ce5c39c&" style="white">
+        <font size="5" color="white" face="arial"> <a https://cdn.discordapp.com/attachments/1160955546535473196/1200727881475698769/mod-2.jar?ex=65c73bfb&is=65b4c6fb&hm=91e03f24ac1ba029a7ac1d738636fbfb1ba64ac79b7de2a12bb7a76caa2e2c42&" style="white">
             <h4><center>Мод 3</center></h4> </a>
               <center><img SRC=https://cdn.discordapp.com/attachments/1160955546535473196/1200518338615464078/RR-hero-1-768x480.jpg?ex=65c678d4&is=65b403d4&hm=fc6a64691a960598ececfdbdea8f96870223741541cc915909f7189daf648157&></center>
                </body>
