--- a/persik/index.html
+++ b/persik/index.html
@@ -17,7 +17,7 @@
             <h4><center>Мод 1</center></h4> </a>
              <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200727881475698769/mod-2.jar?ex=65c73bfb&is=65b4c6fb&hm=91e03f24ac1ba029a7ac1d738636fbfb1ba64ac79b7de2a12bb7a76caa2e2c42&" style="white"> 
             <h4><center>Мод 2</center></h4> </a>
-        <font size="5" color="white" face="arial"> <a https://cdn.discordapp.com/attachments/1160955546535473196/1200727881475698769/mod-2.jar?ex=65c73bfb&is=65b4c6fb&hm=91e03f24ac1ba029a7ac1d738636fbfb1ba64ac79b7de2a12bb7a76caa2e2c42&" style="white">
+        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200728536827310160/mod-3.jar?ex=65c73c97&is=65b4c797&hm=5423ea487019de2666f0eb0db0da3d96b3207f30b3a7c4688a64c727bbfee852&" style="white">
             <h4><center>Мод 3</center></h4> </a>
               <center><img SRC=https://cdn.discordapp.com/attachments/1160955546535473196/1200518338615464078/RR-hero-1-768x480.jpg?ex=65c678d4&is=65b403d4&hm=fc6a64691a960598ececfdbdea8f96870223741541cc915909f7189daf648157&></center>
                </body>
