--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <div class="price-features">
                                 <ul>
 
-                                    <li>Розыгрыш</li>
+                                    <li>Розыгрыш (1 ДК)</li>
                                     <li>18:00</li>
                                     <li>21.01.2024</li>
                                     <li>В нашем дискорде</li>
@@ -76,7 +76,7 @@
                             <div class="price-features">
                                 <ul>
 
-                                    <li>Розыгрыш</li>
+                                    <li>Розыгрыш (1 ДК)</li>
                                     <li>18:00</li>
                                     <li>08.02.2024</li>
                                     <li>В нашем дискорде</li>
