--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <ul>
 
                                     <li>Розыгрыш (1 ДК)</li>
-                                    <li>18:00</li>
+                                    <li>18:00 по мск</li>
                                     <li>21.01.2024</li>
                                     <li>В нашем дискорде</li>
 
@@ -59,7 +59,7 @@
                                 <ul>
                                      <img src=https://cdn.discordapp.com/attachments/1160955546535473196/1188140015696486551/20231223062343.png?ex=65abe59e&is=6599709e&hm=da258b285143de81baa095483ddd8a6fc66a3e6f11b721ba05475bf753d7c12f& height=50px>
                                     <li>Розыгрыш (2 ДК)</li>
-                                    <li>18:00</li>
+                                    <li>18:00 по мск</li>
                                     <li>04.02.2024</li>
                                     <li>В нашем дискорде</li>
                                   <img src=https://cdn.discordapp.com/attachments/1160955546535473196/1188140016099147787/20231223062406.png?ex=65abe59e&is=6599709e&hm=5107176aad8d0b77c428ae9acc7abf257fd7d24f528183c81bb6be10bc18ccdf& height=50px>
@@ -77,7 +77,7 @@
                                 <ul>
 
                                     <li>Розыгрыш (1 ДК)</li>
-                                    <li>18:00</li>
+                                    <li>18:00 по мск</li>
                                     <li>08.02.2024</li>
                                     <li>В нашем дискорде</li>
     
