--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     <li>Розыгрыш (1 ДК)</li>
                                     <li>18:00 по мск</li>
                                     <li>21.01.2024</li>
-                                    <li>В нашем дискорде</li>
+                                    <li>Наш дискорд сервер</li>
 
                                 </ul>
                             </div>
@@ -61,7 +61,7 @@
                                     <li>Розыгрыш (2 ДК)</li>
                                     <li>18:00 по мск</li>
                                     <li>04.02.2024</li>
-                                    <li>В нашем дискорде</li>
+                                    <li>Наш дискорд сервер</li>
                                   <img src=https://cdn.discordapp.com/attachments/1160955546535473196/1188140016099147787/20231223062406.png?ex=65abe59e&is=6599709e&hm=5107176aad8d0b77c428ae9acc7abf257fd7d24f528183c81bb6be10bc18ccdf& height=50px>
                                 </ul>
                             </div>
@@ -79,7 +79,7 @@
                                     <li>Розыгрыш (1 ДК)</li>
                                     <li>18:00 по мск</li>
                                     <li>08.02.2024</li>
-                                    <li>В нашем дискорде</li>
+                                    <li>Наш дискорд сервер</li>
     
 
                                 </ul>
