--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <div class="price-features">
                                 <ul>
 
-                                    <li><a href= https://discord.com/invite/SkHJ3hmMpM color=#ffffff> Розыгрыш (1 ДК)</a> </li>
+                                    <li><a class= "mli" href= https://discord.com/invite/SkHJ3hmMpM color=#ffffff> Розыгрыш (1 ДК)</a> </li>
                                     <li>18:00 по мск</li>
                                     <li>21.01.2024</li>
 
