--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <div class="price-features">
                                 <ul>
                                      <img src=https://cdn.discordapp.com/attachments/1160955546535473196/1188140015696486551/20231223062343.png?ex=65abe59e&is=6599709e&hm=da258b285143de81baa095483ddd8a6fc66a3e6f11b721ba05475bf753d7c12f& height=50px>
-                                    <li><a class="mli" href= https://discord.com/invite/SkHJ3hmMpM color= white> Розыгрыш (2 ДК)</a></li>
+                                    <li><a class="mli" href= https://discord.com/invite/jaSZuU8w?event=1195776258018115714 color= white> Розыгрыш (2 ДК)</a></li>
                                     <li>18:00 по мск</li>
                                     <li>04.02.2024</li>
                                   
@@ -75,7 +75,7 @@
                             <div class="price-features">
                                 <ul>
 
-                                    <li><a class="mli" href= https://discord.com/invite/SkHJ3hmMpM color= white> Розыгрыш (1 ДК)</a></li>
+                                    <li><a class="mli" href= https://discord.com/invite/KK4fV4hrRm?event=1195776343871344792 color= white> Розыгрыш (1 ДК)</a></li>
                                     <li>18:00 по мск</li>
                                     <li>08.02.2024</li>
                                   
