--- a/persik/index.html
+++ b/persik/index.html
@@ -11,14 +11,20 @@
 </head>
       <body> <p>
              <font size="9" color="white" face="arial">
-      </p><h1><center>Моды для ивента</center></h1> </font>
+      </p><h1><center>Моды для ивента</center></h1> 
+      <h2>Запускать 1.12.2 Forge Optifine</h2></font>
              <font size="5" color="white" face="arial"> <h3><center>ЗАПУСКАТЬ ТОЛЬКО С ЭТИМИ МОДАМИ БЕЗ ОПТИФАЙНА</center> </h3> </font>
- <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200726774837948456/mod-1.jar?ex=65c73af3&is=65b4c5f3&hm=7dc37c7a517b91e5ad76cc18fd8a090f5e9d70accdb9a5a489c5d1415bd8baf3&" style="white"> 
+ <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396073271376/Furniture-Mod-6.3.2-1.12.2.jar?ex=65d09c7a&is=65be277a&hm=d6332244a4fc102539c4c1b982d7651e5e655541150254aa4689471d23b9ef5e&" style="white"> 
             <h4><center>Мод 1</center></h4> </a>
-             <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200727881475698769/mod-2.jar?ex=65c73bfb&is=65b4c6fb&hm=91e03f24ac1ba029a7ac1d738636fbfb1ba64ac79b7de2a12bb7a76caa2e2c42&" style="white"> 
+             <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396484309093/CustomNPCs_1.12.2_05Jul20.jar?ex=65d09c7a&is=65be277a&hm=98efad056555e9644e354d8a952b9ece82bc4d972212b24f019878af72092493&" style="white"> 
             <h4><center>Мод 2</center></h4> </a>
-        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1200728536827310160/mod-3.jar?ex=65c73c97&is=65b4c797&hm=5423ea487019de2666f0eb0db0da3d96b3207f30b3a7c4688a64c727bbfee852&" style="white">
+        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396836507688/SRParasites-1.12.2v1.9.12.jar?ex=65d09c7a&is=65be277a&hm=fa056441365b5cb170bb3b3014bc70bcf64ea7a2cc5067437b4c4642a860e777&" style="white">
             <h4><center>Мод 3</center></h4> </a>
+        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396836507688/SRParasites-1.12.2v1.9.12.jar?ex=65d09c7a&is=65be277a&hm=fa056441365b5cb170bb3b3014bc70bcf64ea7a2cc5067437b4c4642a860e777&" style="white">
+                <h4><center>Мод 4/center></h4> </a>
+        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396836507688/SRParasites-1.12.2v1.9.12.jar?ex=65d09c7a&is=65be277a&hm=fa056441365b5cb170bb3b3014bc70bcf64ea7a2cc5067437b4c4642a860e777&" style="white">
+                <h4><center>Мод 5</center></h4> </a>
+        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396836507688/SRParasites-1.12.2v1.9.12.jar?ex=65d09c7a&is=65be277a&hm=fa056441365b5cb170bb3b3014bc70bcf64ea7a2cc5067437b4c4642a860e777&" style="white">
               <center><img SRC=https://cdn.discordapp.com/attachments/1160955546535473196/1200518338615464078/RR-hero-1-768x480.jpg?ex=65c678d4&is=65b403d4&hm=fc6a64691a960598ececfdbdea8f96870223741541cc915909f7189daf648157&></center>
-               </body>
+        </body>
         </html>
