--- a/persik/index.html
+++ b/persik/index.html
@@ -20,9 +20,9 @@
             <h4><center>Мод 2</center></h4> </a>
         <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396836507688/SRParasites-1.12.2v1.9.12.jar?ex=65d09c7a&is=65be277a&hm=fa056441365b5cb170bb3b3014bc70bcf64ea7a2cc5067437b4c4642a860e777&" style="white">
             <h4><center>Мод 3</center></h4> </a>
-        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396836507688/SRParasites-1.12.2v1.9.12.jar?ex=65d09c7a&is=65be277a&hm=fa056441365b5cb170bb3b3014bc70bcf64ea7a2cc5067437b4c4642a860e777&" style="white">
+        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305397318848532/pamsharvestcraft1.12.2zg.jar?ex=65d09c7b&is=65be277b&hm=a43f65a60e39cb870b898c68fd79ee87fe056c0f2aa39191cd47a98e98f9a820&" style="white">
                 <h4><center>Мод 4/center></h4> </a>
-        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396836507688/SRParasites-1.12.2v1.9.12.jar?ex=65d09c7a&is=65be277a&hm=fa056441365b5cb170bb3b3014bc70bcf64ea7a2cc5067437b4c4642a860e777&" style="white">
+        <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305397923094548/mw_1.11.7.7_mc1.12.2_1.jar?ex=65d09c7b&is=65be277b&hm=4c257299a71c2bd079582026a030af8d74ba9212aacb880aa6cf201f4b4b9f46&" style="white">
                 <h4><center>Мод 5</center></h4> </a>
         <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396836507688/SRParasites-1.12.2v1.9.12.jar?ex=65d09c7a&is=65be277a&hm=fa056441365b5cb170bb3b3014bc70bcf64ea7a2cc5067437b4c4642a860e777&" style="white">
               <center><img SRC=https://cdn.discordapp.com/attachments/1160955546535473196/1200518338615464078/RR-hero-1-768x480.jpg?ex=65c678d4&is=65b403d4&hm=fc6a64691a960598ececfdbdea8f96870223741541cc915909f7189daf648157&></center>
