--- a/persik/index.html
+++ b/persik/index.html
@@ -14,16 +14,16 @@
       </p><h1><center>Моды для ивента</center></h1> </font>
        <font size="5" color="white" face="arial"> <h2><center>Запускать 1.12.2 Forge Optifine</h2> </center> </font>
             <ol class="pills">
-  <li> <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396073271376/Furniture-Mod-6.3.2-1.12.2.jar?ex=65d09c7a&is=65be277a&hm=d6332244a4fc102539c4c1b982d7651e5e655541150254aa4689471d23b9ef5e&" style="white"> 
-            <h4>Мод 1</h4> </a></li>
-  <li> <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396484309093/CustomNPCs_1.12.2_05Jul20.jar?ex=65d09c7a&is=65be277a&hm=98efad056555e9644e354d8a952b9ece82bc4d972212b24f019878af72092493&" style="white"> 
-            <h4>Мод 2</h4> </a></li>
-  <li>  <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305396836507688/SRParasites-1.12.2v1.9.12.jar?ex=65d09c7a&is=65be277a&hm=fa056441365b5cb170bb3b3014bc70bcf64ea7a2cc5067437b4c4642a860e777&" style="white">
-            <h4>Мод 3</h4> </a></li>
-  <li>  <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305397318848532/pamsharvestcraft1.12.2zg.jar?ex=65d09c7b&is=65be277b&hm=a43f65a60e39cb870b898c68fd79ee87fe056c0f2aa39191cd47a98e98f9a820&" style="white">
-                <h4>Мод 4</h4> </a></li>
-  <li> <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1179382697026650182/1203305397923094548/mw_1.11.7.7_mc1.12.2_1.jar?ex=65d09c7b&is=65be277b&hm=4c257299a71c2bd079582026a030af8d74ba9212aacb880aa6cf201f4b4b9f46&" style="white">
-                <h4>Мод 5</h4> </a></li>
+   <font size="5" color="white" face="arial"> <a href= CustomNPCs_1.12.2_05Jul20.jar" style="white"> 
+            <h4>Мод 1</h4> </a>
+ <font size="5" color="white" face="arial"> <a href= Furniture-Mod-6.3.2-1.12.2.jar" style="white"> 
+            <h4>Мод 2</h4> </a>
+    <font size="5" color="white" face="arial"> <a href= pamsharvestcraft1.12.2zg.jar" style="white">
+            <h4>Мод 3</h4> </a>
+    <font size="5" color="white" face="arial"> <a href= SRParasites-1.12.2v1.9.12.jar" style="white">
+                <h4>Мод 4</h4> </a>
+   <font size="5" color="white" face="arial"> <a href=https://cdn.discordapp.com/attachments/1160955546535473196/1208408930376749076/mw_1.11.7.7_mc1.12.2_1.jar?ex=65e32d84&is=65d0b884&hm=48a4e7e9aeaee6c4564eedc3e64c4b463396de898cd689820ce63e8e89d0d10e&" style="white">
+                <h4>Мод 5</h4> </a>
 </ol>
 
             
