--- a/persik/index.html
+++ b/persik/index.html
@@ -14,13 +14,13 @@
       </p><h1><center>Моды для ивента</center></h1> </font>
        <font size="5" color="white" face="arial"> <h2><center>Запускать 1.12.2 Forge Optifine</h2> </center> </font>
             <ol class="pills">
-   <font size="5" color="white" face="arial"> <a href= CustomNPCs_1.12.2_05Jul20.jar" style="white"> 
+   <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1208409794529071214/CustomNPCs_1.12.2_05Jul20.jar?ex=65e32e52&is=65d0b952&hm=8abd4faf9fdc45ae7834c195558854bf27f3c5e0da959af34de7efe9af9c0ed3&" style="white"> 
             <h4>Мод 1</h4> </a>
- <font size="5" color="white" face="arial"> <a href= Furniture-Mod-6.3.2-1.12.2.jar" style="white"> 
+ <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1208409792742428712/Furniture-Mod-6.3.2-1.12.2.jar?ex=65e32e51&is=65d0b951&hm=0f7681dac7775acaedd454960930b964e9f96c411504aba4839aab3aba2a97e8&" style="white"> 
             <h4>Мод 2</h4> </a>
-    <font size="5" color="white" face="arial"> <a href= pamsharvestcraft1.12.2zg.jar" style="white">
+    <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1208409810689859654/pamsharvestcraft1.12.2zg.jar?ex=65e32e56&is=65d0b956&hm=c25ffaa4680a79a726ebb134f24c89e89bd14df471456d05309558189036750e&" style="white">
             <h4>Мод 3</h4> </a>
-    <font size="5" color="white" face="arial"> <a href= SRParasites-1.12.2v1.9.12.jar" style="white">
+    <font size="5" color="white" face="arial"> <a href= https://cdn.discordapp.com/attachments/1160955546535473196/1208409811226722324/SRParasites-1.12.2v1.9.12.jar?ex=65e32e56&is=65d0b956&hm=d1b5bd3814b3fdd4af68e7bded0e8f2d17187f71fa133c9fe9c4bb9dd6983fdf&" style="white">
                 <h4>Мод 4</h4> </a>
    <font size="5" color="white" face="arial"> <a href=https://cdn.discordapp.com/attachments/1160955546535473196/1208408930376749076/mw_1.11.7.7_mc1.12.2_1.jar?ex=65e32d84&is=65d0b884&hm=48a4e7e9aeaee6c4564eedc3e64c4b463396de898cd689820ce63e8e89d0d10e&" style="white">
                 <h4>Мод 5</h4> </a>
