--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>𝙴𝚅𝙴𝙽𝚃𝚂 𝙾𝙵𝙵𝙸𝙲𝙴</title>
+    <title>Главная</title>
 <link rel="shortcut icon" href="ico.ico" type="image/x-icon">
 <link rel="icon" href="ico.ico" type="image/x-icon">
     <!--[if lt IE 9]> <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
