--- a/metro/index.html
+++ b/metro/index.html
@@ -11,9 +11,9 @@
   </head>
 <body>
 <ol class="pills">
-  <li><a href=https://lemon4nkuser.github.io/metro/mods/Gun-Mod-1.2.6-1.16.5.jar>Gun-Mod-1.2.6-1.16.5</a></li>
-  <li><a href=https://lemon4nkuser.github.io/metro/mods/Vehicle-mod-0.45.2-1.16.3.jar>Obfuscate-0.6.3-1.16.5</a></li>
-  <li><a href=https://lemon4nkuser.github.io/metro/mods/Obfuscate-0.6.3-1.16.5.jar>Vehicle-mod-0.45.2-1.16.5</a></li>
+  <li><a href=https://lemon4nkuser.github.io/metro/mods/Gun-Mod-1.2.6-1.16.5.jar>Gun-Mod-1.2.6</a></li>
+  <li><a href=https://lemon4nkuser.github.io/metro/mods/Vehicle-mod-0.45.2-1.16.3.jar>Obfuscate-0.6.3</a></li>
+  <li><a href=https://lemon4nkuser.github.io/metro/mods/Obfuscate-0.6.3-1.16.5.jar>Vehicle-mod-0.45.2</a></li>
 </ol>
 </body>
 
