--- a/narod/index.html
+++ b/narod/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
- <title>ɴᴀʀᴏᴅ ᴛᴇᴀᴍ | ᴦᴧᴀʙнᴀя</title>
+ <title>NAROD ᴛᴇᴀᴍ</title>
  <link rel="stylesheet" href="style.css">
  <link rel="icon" href="favicon.ico" type="image/x-icon"
 </head>
