--- a/narod/index.html
+++ b/narod/index.html
@@ -11,7 +11,7 @@
 <center><h1 class= "extra" width= 200px>Почему мы?</h1></center>
 <div id="osnova2"><h2 class= "text">Главное - у нас бесплатная проходка и нет доната. Также, почти все время наши сервера работают с 2-х кратным запасом мощности. После недавнего обновления правил мы баним всех токсиков. На сервере присутствует дружеская атмосфера.</h2></div>
 <center><h1 class= "extra" width= 200px>Как получить проходку?</h1></center>
-<div id="osnova3"><h2 class= "text">Проходку можно получить в нашем дискорд-сервере заполнив небольшую анкету. Принимаются только люди с возрастом 12 и более лет. Если Вам меньше 12 - не пишите анкету, поблажек нет. В VK и Telegram получить проходку невозмножно.</h2></div>
+<div id="osnova3"><h2 class= "text">Проходку можно получить в нашем дискорд сервере, заполнив небольшую анкету. Принимаются только люди с возрастом 12 и более лет. Если Вам меньше 12 - не пишите анкету, поблажек нет. В VK и Telegram получить проходку невозмножно.</h2></div>
 </center>
 <center>
 <button title= Discord class= "discord" onclick= "document.location='https://discord.com/invite/Uwm7Q5tgYu'"><img src="social/discord.png" height=100px weight=100px></button>
