--- a/privatehub/code-1/index.html
+++ b/privatehub/code-1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <center><h1 class= "extra" width= 200px>Exit code: 1</h1></center>
-<div id="osnova1"><h2 class= "text">Вы&shyход с ко&shyдом 1 - не&shyпра&shyвиль&shyная вер&shyсия java. Для ее из&shyме&shyне&shyния пе&shyрей&shyди&shyте в сер&shyвер</h2>
+<div id="osnova1"><h2 class= "text">Вы&shyход с ко&shyдом 1 - не&shyпра&shyвиль&shyная вер&shyсия java. Для ее из&shyме&shyне&shyния пе&shyрей&shyди&shyте в уп&shyрав&shyление сер&shyвер&shyом</h2>
 <img class= imgall src= img/one.png>
 <h2 class= "text">Зайдите во вкладку «Запуск»</h2>
 <img class= imgall src= img/two.png>
