--- a/index (1).html
+++ b/index (1).html
@@ -11,7 +11,7 @@
     <div class="container">
 
         <div class="image-section">
-            <img src="http://surl.li/yqqygd" alt="" class="фото">
+            <img src="img1.png">
         </div>
 
         <div class="text-section">
